--- a/Program.html
+++ b/Program.html
@@ -153,7 +153,8 @@
                     </tr>
                     <tr>
                         <td class="time" bgcolor="#D6EAF8">10:30 AM</td>
-                        <td bgcolor="#D6EAF8">Keynote - TBA</td>
+                        <td bgcolor="#D6EAF8">Keynote Speaker: <br> 
+                            <b>Avideh Zakhor</b> (Berkeley Electrical Engineering and Computer Sciences)</td>
                     </tr>
                     <tr>
                         <td class="time" bgcolor="#F6DDCC">11:20 AM</td>
@@ -161,7 +162,15 @@
                     </tr>
                     <tr>
                         <td class="time" bgcolor="#D5F5E3">11:30 AM – 12:30 PM</td>
-                        <td bgcolor="#D5F5E3">Discussion Panel & Closing Remarks</td>
+                        <td bgcolor="#D5F5E3">
+                            <b>Discussion Panel:</b> AI for Aerial Imagery <br>
+                            <b>Moderator:</b> Marc-Antoine Drouin <br>
+                            <b>Panelists:</b> <br>
+                            Raghuveer Rao (US Army Research Laboratory) <br>
+                            Michael McDonald (Defense Research and Development Canada (DRDC), NATO) <br>
+                            Mike McGinty (TerraSense Analytics) <br>
+                            Lars Sommer (Fraunhofer IOSB Karlsruhe Institute of Technology)
+                        </td>
                     </tr>
                 </tbody>
             </table>
