--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <div class="row">
             <div class="span12">
 
-                <h3 style="color:red"><!-- WAAMI 2020 WILL BE HELD ONLINE.<br> -->
-                SUBMISSION DEADLINE EXTENDED !!! FINAL EXTENSION !!!</h3>
+               <!--  <h3 style="color:red">
+                SUBMISSION DEADLINE EXTENDED !!! FINAL EXTENSION !!!</h3> -->
 
                 <!-- <br> -->
 
