--- a/index.html
+++ b/index.html
@@ -104,6 +104,86 @@
                     <a href="files/2021_WAAMI_CFP.pdf">Download the Call for Paper in PDF</a>
                 </p>
                 <br>
+                <br>
+
+                <h2 align="center">Keynote Speaker</h2>
+
+                <div class="flexWrap">
+                  <div class="flexCol2">
+                    <div class="center-img2">
+                        <div>
+                            <img src="img/Zakhor.png" class="img-responsive"/>  
+                        </div>
+                        <div class="org-name">
+                            <b>Avideh Zakhor</b>  
+                        </div>
+                        <div class="org-affiliation">
+                            <i>Berkeley Electrical Engineering and Computer Sciences</i> 
+                        </div>
+                    </div>
+                  </div>
+                </div>
+
+                <br>
+
+                <h2 align="center">Panel Discussion on AI for Aerial Imagery</h2>
+
+                <div class="flexWrap">
+                  <div class="flexCol2">
+                    <div class="center-img2">
+                        <div>
+                            <img src="img/RanghuveerRao.png" class="img-responsive"/>  
+                        </div>
+                        <div class="org-name">
+                            <b>Raghuveer Rao</b>  
+                        </div>
+                        <div class="org-affiliation">
+                            <i>US Army Research Laboratory</i> 
+                        </div>
+                    </div>
+                  </div>
+                  <div class="flexCol2">
+                    <div class="center-img2">
+                        <div>
+                            <img src="img/MikeMcDonald.png" class="img-responsive"/>  
+                        </div>
+                        <div class="org-name">
+                            <b>Michael McDonald</b>  
+                        </div>
+                        <div class="org-affiliation">
+                            <i>Defense Research and Development Canada (DRDC), NATO</i> 
+                        </div>
+                    </div>
+                  </div>
+                  <div class="flexCol2">
+                    <div class="center-img2">
+                        <div>
+                            <img src="img/MikeMcGinty.png" class="img-responsive"/>  
+                        </div>
+                        <div class="org-name">
+                            <b>Mike McGinty</b>  
+                        </div>
+                        <div class="org-affiliation">
+                            <i>TerraSense Analytics</i> 
+                        </div>
+                    </div>
+                  </div>
+                  <div class="flexCol2">
+                    <div class="center-img2">
+                        <div>
+                            <img src="img/LarsSommer.png" class="img-responsive"/>  
+                        </div>
+                        <div class="org-name">
+                            <b>Lars Sommer</b>  
+                        </div>
+                        <div class="org-affiliation">
+                            <i>Fraunhofer IOSB Karlsruhe Institute of Technology</i> 
+                        </div>
+                    </div>
+                  </div>
+                </div>
+
+                <br>
 
             </div>
         </div>
