--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <b>Avideh Zakhor</b>  
                         </div>
                         <div class="org-affiliation">
-                            <i>Berkeley Electrical Engineering and Computer Sciences</i> 
+                            <i>University of California-Berkeley, Dept. of Electrical Engineering and Computer Sciences</i> 
                         </div>
                     </div>
                   </div>
