--- a/Program.html
+++ b/Program.html
@@ -154,7 +154,7 @@
                     <tr>
                         <td class="time" bgcolor="#D6EAF8">10:30 AM</td>
                         <td bgcolor="#D6EAF8">Keynote Speaker: <br> 
-                            <b>Avideh Zakhor</b> (Berkeley Electrical Engineering and Computer Sciences)</td>
+                            <b>Avideh Zakhor</b> (University of California-Berkeley, Dept. of Electrical Engineering and Computer Sciences)</td>
                     </tr>
                     <tr>
                         <td class="time" bgcolor="#F6DDCC">11:20 AM</td>
