Updating keynote speaker.

--- a/Organizers.html
+++ b/Organizers.html
@@ -153,7 +153,7 @@
                     <li>Heesung Kwon, USARMY CCDC Army Research Laboratory (USA)&nbsp;</li>
                     <li>Guoyu Lu, Rochester Institute of Technology (USA)&nbsp;</li>
                     <li>Joseph L. Mundy, Vision Systems&nbsp;</li>
-                    <li>Mahdieh Poostchi, Samsung Electronics (USA)&nbsp;</li>
+                    <li>Mahdieh Poostchi, Microsoft&nbsp;</li>
                     <li>David Portugal, University of Coimbra (Portugal)&nbsp;</li>
                     <li>Raghuveer Rao, USARMY CCDC Army Research Laboratory (USA) &nbsp;</li>
                     <li>Walter Scheirer, University of Notre Dame (USA)&nbsp;</li>
