--- a/index.html
+++ b/index.html
@@ -109,17 +109,31 @@
                 <h2 align="center">Keynote Speaker</h2>
 
                 <div class="flexWrap">
-                  <div class="flexCol2">
-                    <div class="center-img2">
-                        <div>
-                            <img src="img/Zakhor.png" class="img-responsive"/>  
+                  <div class="flexWrapKeynote">
+                    <div class="flexWrapImgAff">
+                        <div class="center-imgKeynote">
+                            <div>
+                                <img src="img/Zakhor.png" class="img-responsive"/>  
+                            </div>
+                            <div class="org-name">
+                                <b>Avideh Zakhor</b>  
+                            </div>
+                            <div class="org-affiliation">
+                                <i>University of California-Berkeley, Dept. of Electrical Engineering and Computer Sciences</i> 
+                            </div>
                         </div>
-                        <div class="org-name">
-                            <b>Avideh Zakhor</b>  
-                        </div>
-                        <div class="org-affiliation">
-                            <i>University of California-Berkeley, Dept. of Electrical Engineering and Computer Sciences</i> 
-                        </div>
+                    </div>
+                    <div class="flexWrapTitleAbst">
+                        <table class="tableizer-tableKeynote">
+                            <tbody>
+                                <tr>
+                                    <td><b>Title: </b> EO/IR processing of unmanned aerial vehicle captured imagery</td>
+                                </tr>
+                                <tr>
+                                    <td><b>Abstract: </b> In this talk, I will describe a number of image processing pipelines associated with drone imagery. I start with a reality capture pipeline for 3D building reconstruction  from RGB imagery captured via an unmanned aerial vehicle. This is an important problem with applications in urban planning, emergency response, disaster planning, and building energy efficiency. We leverage the commercial software  to construct a 3D point cloud from RGB drone imagery, which is then used in conjunction with image processing and geometric methods to extract a building footprint. The footprint is then extruded vertically based on the heights of the segmented rooftops to result in an ultra-compact 3D model of the building. Next I describe a method to estimate window to wall ratio (WWR) which has been shown to critically influence  heat loss, solar gain and daylighting levels with implications for visual and thermal comfort as well as building energy performance.  Next, I will  describe a pipeline for semantic segmentation of 3D point clouds into buildings and vegetation obtained via photogrammetry from aerial RGB camera images. The motivation is to compute the minimum distance between vegetation and buildings which could be a fire hazard in fire prone regions such as California. Finally, I will describe challenges in combining EO and IR imagery to detect ground objects using unmanned aerial vehicles. </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                   </div>
                 </div>
