Updating home page.

--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
 
                 <br>
 
-                <h2>Important dates</h2>
+                <!-- <h2>Important dates</h2>
                 <p style="color:red; font-size: 20px">
                     Submission deadline extended !!!  Final extension !!!
                 </p>
                 <ul class="">
-                    <li><strong>Workshop paper submission deadline: July 23rd, 2021</strong></li>
+                    <li><strong>Workshop paper submission deadline: July 23rd, 2021</strong></li> -->
                     <!-- <li>Workshop paper submission deadline: <strong>July 10th, 2021</strong></li> -->
-                    <li>Workshop author notification: <strong>August 1st, 2021</strong></li>
+                    <!-- <li>Workshop author notification: <strong>August 1st, 2021</strong></li>
                     <li>Camera-ready submission: <strong>August 17th, 2021</strong></li>
                 </ul>
-                <br>
+                <br> -->
                 <br>
                 <p>
                     <a href="files/2021_WAAMI_CFP.pdf">Download the Call for Paper in PDF</a>
@@ -127,7 +127,7 @@
                         <table class="tableizer-tableKeynote">
                             <tbody>
                                 <tr>
-                                    <td><b>Title: </b> EO/IR processing of unmanned aerial vehicle captured imagery</td>
+                                    <td><b>Title: </b> EO/IR processing of unmanned aerial vehicle captured imagery [<a href="https://drive.google.com/file/d/1F_5AqQOF0aadrOGSVpOBndbSik9seE-2/view?usp=sharing">video</a>]</td>
                                 </tr>
                                 <tr>
                                     <td><b>Abstract: </b> In this talk, I will describe a number of image processing pipelines associated with drone imagery. I start with a reality capture pipeline for 3D building reconstruction  from RGB imagery captured via an unmanned aerial vehicle. This is an important problem with applications in urban planning, emergency response, disaster planning, and building energy efficiency. We leverage the commercial software  to construct a 3D point cloud from RGB drone imagery, which is then used in conjunction with image processing and geometric methods to extract a building footprint. The footprint is then extruded vertically based on the heights of the segmented rooftops to result in an ultra-compact 3D model of the building. Next I describe a method to estimate window to wall ratio (WWR) which has been shown to critically influence  heat loss, solar gain and daylighting levels with implications for visual and thermal comfort as well as building energy performance.  Next, I will  describe a pipeline for semantic segmentation of 3D point clouds into buildings and vegetation obtained via photogrammetry from aerial RGB camera images. The motivation is to compute the minimum distance between vegetation and buildings which could be a fire hazard in fire prone regions such as California. Finally, I will describe challenges in combining EO and IR imagery to detect ground objects using unmanned aerial vehicles. </td>
