--- a/Program.html
+++ b/Program.html
@@ -114,7 +114,7 @@
                     </tr>
                     <tr>
                         <td class="time">8:00 AM</td>
-                        <td><i><b>JanusNet: Detection of Moving Objects from UAV Platforms</b></i> <br>
+                        <td><i><b>JanusNet: Detection of Moving Objects from UAV Platforms</b></i> [<a href="https://drive.google.com/file/d/1tKJVsUcSGZS13Fq3O_ZHcfJ6uX_oZLyU/view?usp=sharing">video</a>] <br>
                         <i>Yuxiang Zhao; Khurram Shafique; Zeeshan Rasheed; Maoxu Li (Novateur Research Solutions)</i></td>
                     </tr>
                     <tr>
